// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-editor Renders \`text-editor\` with custom props 1`] = `
<settings-button-field-stub
  addable="true"
  removable="true"
>
  <div
    class="subheading"
  >
    Custom title
  </div>
</settings-button-field-stub>
`;

exports[`text-editor Renders \`text-editor\` with default props 1`] = `
<settings-button-field-stub
  addable="true"
  isempty="true"
  removable="true"
>
  <div
    class="subheading"
  >
    
  </div>
</settings-button-field-stub>
`;
